--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </div>
                     
                     <!-- the contact form -->
-                    <div class="col-sm-7" method="post" action="//formspree.io/davidalxeup@gmail.com">
+                    <div class="col-sm-7" method="post" action="https://formspree.io/david.deng.aus@gmail.com">
                         <div class="row">
                             <div class="form-group col-sm-6">
                                 <input class="form-control" id="name" name="name" placeholder="Your name" type="text" required>
