--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
                 
             <!-- the contact form -->
-            <form action="https://formspree.io/david.deng.aus@gmail.com">
+            <form action="https://formspree.io/david.deng.aus@gmail.com" method="post">
                         
                 <!-- first row includes name and email -->
                 <div class="row px-lg-5 px-sm-3">
