--- a/index.html
+++ b/index.html
@@ -286,17 +286,17 @@
 
                     <div class="form-group col-sm-6">
                         <label for="inputName4">Name</label>
-                        <input type="name" class="form-control" id="name" placeholder="Your name" required>
+                        <input type="name" class="form-control" placeholder="Your name" required>
                     </div>
 
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Your email" required>
+                        <input type="email" class="form-control" placeholder="Your email" required>
                     </div>
                     
                     <div class="form-group col">
                         <label for="exampleFormControlTextarea1">Your messages</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message is..." required></textarea>
+                        <textarea class="form-control" rows="3" placeholder="Your message is..." required></textarea>
                     </div>
                     
                     <div class="col-sm-12 form-group">
