--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <!-- info card -->
                         
                         <div class="card border-light mx-auto col-sm-8 col-md-8 col-lg-8 shadow-lg p-3 mb-5 rounded slideanim">
-                            <img class="card-img-top" src="img/dawei.png" alt="Card image" style="width: 100%">
+                            <img class="card-img-top" src="img/CVP2.png" alt="Card image" style="width: 100%">
                             <div class="card-body">
                                 <h4 class="card-title">Dawei Deng</h4>
                                 <p class="card-text">Creater & Designer</p>
