--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             
                             <div class="col-sm-6">
                                 <i class="fas fa-briefcase py-lg-3 py-sm-2 py-2"></i>
-                                <h5>Work expereince</h5>
+                                <h5>Work experience</h5>
                                 <h3>3 Years  in UX</h3>
                                 <h3>4 Years  in BA</h3>
                             </div>
