--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                         </h6>
                         
                         <br/>
+                        
+                        <h6>Immediately before enrolling in my master's degree, I was employed by Toyota for four years, during which time I developed strong analytical problem solving and communication skills. As a Business Analyst, I have been able to follow the development of a system from conception to completion and I have participated fully in all phases when implementing ICT project management.</h6>
+                        <br/>
+                        <br/>
                         <div class="row col">
                             <a href="https://www.linkedin.com/in/daweideng/" class="btn btn-info btn-outline-light nav-link" role="button">See my resume</a>
                         </div>
